adding api-gateway
